fix: header cut off

--- a/src/components/NoteDialogComponents/NoteDialogHeader.scss
+++ b/src/components/NoteDialogComponents/NoteDialogHeader.scss
@@ -8,7 +8,6 @@
   // height: $stack-view__header-height;
   min-height: $stack-view__min-height;
   letter-spacing: $letter-spacing--large;
-  line-height: $line-height--large;
   text-align: center;
   cursor: initial;
   display: flex;
